cleaning up for distribution and usability

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Images compare</title>
+  <title>Images compare report</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link rel="stylesheet" href="BeerSlider.css">
+  <link rel="stylesheet" href="nll-image-compare-report-files/BeerSlider.css">
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -73,8 +73,8 @@
 
   </style>
 
-  <script src="configuration.js"></script>
-  <script src="BeerSlider.js"></script>
+  <script src="nll-image-compare-report-files/configuration.js"></script>
+  <script src="nll-image-compare-report-files/BeerSlider.js"></script>
   <script>
 
     function buildCmpItem(title, before, after, anchorName)
